# sfzinstruments.github.io

./: .editorconfig  .gitattributes  .gitignore  404.md  Gemfile  README.md  _config.yml  atom.xml  index.html  index.md  mkdocs.sh  mkdocs.yml  new_post.sh  package.json  pyproject.toml  setup.sh  sitemap.xml
_includes/: favicons.html  footer.html  head.html  img-fluid.html  navigation.html  post-archive.html  post.html  scripts.html  search.html
_layouts/: default.html  home.html  no_title.html  post.html
_posts/: 2020-04-29-new-website-launched.md
basses/: beefowulf_bass.md  fashionbass.md  growlybass.md  index.html  index.md  pastabass.md  rickenbacker4001.md  secret_agent_bass.md  standard_bass.md  swagbass.md
brass/: index.html  index.md  war_tuba.md
docs/: adding-instruments.md  index.md
drum_machines/: index.html  index.md
drums/: big_rusty_drums.md  bjdnielpercussions.md  drs_kit.md  frankensnare.md  g1.md  g1_basic.md  gogodze_phu_vol_ii.md  index.html  index.md  l1.md  muldjord_kit.md  naked_drums.md  salamander.md  sams_sonor.md  sm_drums.md  swirly_drums.md  unruly_drums.md
folk/: 1912.md  index.html  index.md  kay_5_string_banjo.md  kemence_of_the_black_sea.md  koto.md  mf_tin_whistle.md  nanfo.md  three_tagelharpas.md  turkish_rebab.md
guitars/: emilyguitar.md  glockenskull_guitar.md  index.html  index.md  metal_gtx.md  secret_agent_guitar.md  shinyguitar.md  slapper.md  snowkiss_guitar.md  standard_guitar.md
keyboards/: index.html  index.md  sforzatron.md
layout/: base.j2  blogging-plugin.html  main.html
macros/: module.py
(+338 files in other folders)
