[tool.poetry]
name = "sfzinstruments_website"
version = "1.0.0"
description = "SFZ instruments website"
authors = ["redtide <redtid3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8"
python-frontmatter = "^1.0.1"

# requests dependencies
certifi = ">=2023.7.22"
urllib3 = ">=2.0.6,<3"

# mkdocs-blogging-plugin dependencies
gitpython = ">=3.1.35"

css-html-js-minify = "^2.5.5"
pysass = "^0.1.0"

mkdocs = "^1.4.3"
mkdocs-blogging-plugin = "^2.2.9"
mkdocs-exclude = "^1.0.2"
mkdocs-gen-files = "^0.5.0"
mkdocs-macros-plugin = "^1.0.1"
mkdocs-minify-plugin = "^0.6.4"
pymdown-extensions = "^10.0.1"
requests = {extras = ["security"], version = "^2.31.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
